add scoped identifiers and fix TsFunctionArg casting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,9 @@
         "xstddef": "cpp",
         "xstring": "cpp",
         "xtr1common": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "list": "cpp",
+        "unordered_map": "cpp",
+        "xhash": "cpp"
     }
 }
